--- a/productName.html
+++ b/productName.html
@@ -4,25 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 </head>
 <body>
     <div class="cart-item">
-  <span class="item-name">Product Name</span>
-  <span class="price">$25</span>
-
-  <div class="quantity-controls">
-    <button class="minus-btn">-</button>
-    <span class="quantity">1</span>
-    <button class="plus-btn">+</button>
-  </div>
-
-  <button class="like-btn">❤️</button>
-  <button class="delete-btn">🗑️</button>
-</div>
-
-<div class="cart-total">
-  Total: <span id="total-price">$0.00</span>
-</div>
-
+        <div class="product-block">
+            <img src="image/socks.png" alt="Socks" class="product-image">
+            <span class="item-name">Socks</span>
+            <span class="price">$25</span>
+        </div>
+        <div class="product-block">
+            <img src="image/bag.png" alt="Bag" class="product-image">
+            <span class="item-name">Bag</span>
+            <span class="price">$40</span>
+        </div>
+        <div class="product-block">
+            <img src="image/baskets.png" alt="Baskets" class="product-image">
+            <span class="item-name">Baskets</span>
+            <span class="price">$30</span>
+        </div>
+        <div class="product-block">
+            <img src="image/baskets copy.png" alt="Baskets Copy" class="product-image">
+            <span class="item-name">Baskets Copy</span>
+            <span class="price">$35</span>
+        </div>
+        <div class="product-block">
+            <img src="image/delete.png" alt="Delete Icon" class="product-image" style="width:40px;">
+            <span class="item-name">Delete Icon</span>
+            <span class="price">$10</span>
+        </div>
+        <div class="quantity-controls">
+            <button class="minus-btn">-</button>
+            <span class="quantity">1</span>
+            <button class="plus-btn">+</button>
+        </div>
+        <button class="like-btn">❤️</button>
+        <button class="delete-btn">🗑️</button>
+    </div>
+    
+    <div class="cart-total">
+        Total: <span id="total-price">$0.00</span>
+    </div>
+    
+<script src="features.js"></script>
 </body>
 </html>
